Edge slide snapping to face issue - it do not align to the face extension #92605

Closed
opened 2021-10-29 12:16:27 +02:00 by Rav · 7 comments

System Information
Operating system: Win 10
Graphics card: 2080ti

Blender Version
Broken: current 3.0, 3.1.0
Worked: 2.93.5

Edge slide snapping to face the issue - it does not align to the face extension

Exact steps for others to reproduce the error
3_1 edge slide issue.jpg
I have a chopped box. I wanted to slide an edge to fit the extension of the angled face.

  1. edit mode, snapping to face on, '1' for vertex editing
  2. shift+V of GG to move chosen corner, 'C' or alt to clamp off
  3. cursor to angled face...

Result:
in 3.0 October releases and current 3.1 position of vertex reflects Z factor of cursor position (?!?)

 

in 2.93.5 works correctly - it goes to the intersection of slid edge with the extension of the face.
expected result (2.93) below

2_93_5 - works correcly.jpg

**System Information** Operating system: Win 10 Graphics card: 2080ti **Blender Version** Broken: current 3.0, 3.1.0 Worked: 2.93.5 Edge slide snapping to face the issue - it does not align to the face extension **Exact steps for others to reproduce the error** ![3_1 edge slide issue.jpg](https://archive.blender.org/developer/F11594732/3_1_edge_slide_issue.jpg) I have a chopped box. I wanted to slide an edge to fit the extension of the angled face. 1. edit mode, snapping to face on, '1' for vertex editing 2. shift+V of GG to move chosen corner, 'C' or alt to clamp off 3. cursor to angled face... Result: in 3.0 October releases and current 3.1 position of vertex reflects Z factor of cursor position (?!?) ``` ``` in 2.93.5 works correctly - it goes to the intersection of slid edge with the extension of the face. expected result (2.93) below ![2_93_5 - works correcly.jpg](https://archive.blender.org/developer/F11594944/2_93_5_-_works_correcly.jpg)
Author

Added subscriber: @mccornik

Added subscriber: @mccornik

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Germano Cavalcante self-assigned this 2021-11-01 15:30:19 +01:00

Thanks for the report, I can confirm.
Investigating...

Thanks for the report, I can confirm. Investigating...

This issue was referenced by c0fbbc53e8

This issue was referenced by c0fbbc53e8fe6e58a1d6029754a2e1da1f9acfcc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Germano You are GREAT!
All the best, thak You :-D

Germano You are GREAT! All the best, thak You :-D
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92605
No description provided.