Fix T92605: Snapping not aligning to face extension

Regression indroduced in rB69d6222481b4342dc2a153e62752145aa37ea101